# Karez

./: .gitignore  .yamllint  404.html  Dockerfile  LICENSE  README.md  depcheck-suppression.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/workflows/: build-release.yml  build.yml  clean-untagged-packages.yml  security-scanning.yml
architecture/: index.html
cli/: index.html
concepts/: index.html
config/: connectors.toml  converters.toml
deployment/: index.html
docs/: cli.md  concepts.md  gen_ref_pages.py  get-started.md
docs/howtos/: SUMMARY.md
docs/reference/: SUMMARY.md
docs/reference/karez/: config.md  index.md  role.md  utils.md
docs/reference/karez/cli/: collect.md  common.md  (+4 more)
get-started/: index.html
howtos/SUMMARY/: index.html
howtos/config_plugin/: index.html
howtos/write_plugin/: index.html
karez/: base.py  common.py  config.py  connector.py  converter.py  dispatcher.py  main.py  plugins.py  role.py  utils.py
karez/aggregator/: base.py  builtin.py
karez/aggregator/extras/: __init__.py  echo.py
karez/cli/: __init__.py  collect.py  common.py  config.py  deploy.py  plugin.py  test.py
karez/connector/: __init__.py  base.py  opcua.py  restful.py
karez/connector/extras/: __init__.py  eaton.py  eaton_telemetry.py  modbus.py  opcua.py  schneider.py  virtgen_telemetry.py
karez/converter/: __init__.py  base.py
karez/converter/extras/: __init__.py  eaton_telemetry.py  filter_and_update_meta.py  fix_timestamp.py  influx_json_format.py  influx_line_protocol.py  update_info.py
karez/dispatcher/: __init__.py  base.py  default.py
karez/dispatcher/extras/: __init__.py  default.py  eaton.py  modbus.py  opcua.py
license/: index.html
plugins/SUMMARY/: index.html
plugins/aggregator/: echo.py
plugins/connector/: eaton_telemetry.py  opcua.py  virtgen_telemetry.py
plugins/converter/: eaton_telemetry.py  fix_timestamp.py  fmt_ts_point.py  set_measurement.py  update_info.py
plugins/dispatcher/: default.py
reference/SUMMARY/: index.html
reference/docs/gen_ref_pages/: index.html
reference/karez/: index.html
reference/karez/cli/: index.html
reference/karez/config/: index.html
reference/karez/connector/: index.html
reference/karez/converter/: index.html
reference/karez/dispatcher/: index.html
reference/karez/role/: index.html
reference/karez/utils/: index.html
sample/config/: eaton.yaml  eaton_device_info.json  eaton_devices.json  eaton_dispatcher.toml  opcua.yaml  opcua_points.json  opcua_points_info.json  virtgen.yaml  virtgen_device_types.json  virtgen_devices.json
sample/deploy/: docker-compose.yml  telegraf.conf
sample/telegraf/: telegraf.conf
search/: search_index.json
(+48 files in other folders)
