[tool.poetry]
name = "karez"
version = "0.10.2"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nats-py = "^2.0.0"
dynaconf = "^3.1.7"
pymodbus = "^2.5.3"
influxdb-client = "^1.33.0"
typer = "^0.9.0"
colorama = "^0.4.6"
dateutils = "^0.6.12"
asyncua = "^1.0.2"
protobuf = "^4.23.2"
paho-mqtt = "^1.6.1"
rich = "^13.6.0"
pandas = "^2.1.1"
loguru = "^0.7.2"
httpx = "^0.25.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mkdocs = {extras = ["python-legacy"], version = "^1.3.1"}
mkdocstrings = "^0.18.1"
mkdocs-material = "^8.2.8"
mkdocs-typer = "^0.0.2"
Markdown = "^3.3.6"
pymdown-extensions = "^9.3"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
karez = "karez.cli:app"

[tool.poetry.extras]
influxdb = ["influxdb-client"]
