[tool.poetry]
name = "karez"
version = "0.11.4"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nats-py = "^2.0.0"
dynaconf = "^3.1.7"
influxdb-client = "^1.33.0"
colorama = "^0.4.6"
dateutils = "^0.6.12"
asyncua = "^1.0.2"
protobuf = "^4.23.2"
paho-mqtt = "^1.6.1"
rich = "^13.6.0"
pandas = "^2.1.1"
loguru = "^0.7.2"
pymodbus = "<3"
typer = "^0.12.3"
httpx = "^0.27.0"
fastapi = "^0.110.0"
uvicorn = "<0.26.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
bcrypt = "^4.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pymdown-extensions = "^9.3"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
karez = "karez.cli:app"

[tool.poetry.extras]
influxdb = ["influxdb-client"]
